# AutoTranslateTool

./: .gitignore  README.md  main.py  manager.py  pyproject.toml  remove_error_failback.py  run.cmd  sample.txt
config/: __init__.py  constants.py
prompts/: cerebras_batch_prompt.txt  lmstudio_batch_prompt.txt  lmstudio_dict_prompt.txt  lmstudio_system_dict.txt  nvidia_batch_prompt.txt  nvidia_dict_prompt.txt  nvidia_system_batch.txt
translators/: __init__.py  base.py  bing.py  cerebras.py  google.py  lmstudio.py  nllb.py  nvidia.py  opus_mt.py
utils/: __init__.py  batch_manager.py  cache.py  file_handler.py  validators.py
