[project]
name = "autotranslatetool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "googletrans>=4.0.0rc1",
    "tqdm>=4.67.1",
    "deep-translator>=1.11.4",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.7",
    "transformers>=4.46.3",
    "sacremoses>=0.1.1",
    "torch>=2.7.0",
    "sentencepiece>=0.2.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true