[project]
name = "autotranslatetool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "googletrans>=4.0.0rc1",
    "tqdm>=4.67.1",
    "deep-translator>=1.11.4",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.7",
    "cerebras-cloud-sdk>=1.59.0",
]
